Too Big Changes - Switched backend logic. Comms through command line. Fix preproc.py preprocessing

--- a/resources.qrc
+++ b/resources.qrc
@@ -12,5 +12,7 @@
     <qresource prefix="/SimScreen">
         <file>2025 REEFSCAPE Transparent Background.png</file>
     </qresource>
-    <qresource prefix="/"/>
+    <qresource prefix="/">
+        <file>settings.qml</file>
+    </qresource>
 </RCC>
