Revert "Restarting simscreen, getting too complicated"
This reverts commit 38ddae02482f0e8243548c4e79f933e5a0f9d8d7.

--- a/resources.qrc
+++ b/resources.qrc
@@ -10,7 +10,7 @@
         <file>app-logo.png</file>
     </qresource>
     <qresource prefix="/SimScreen">
-        <file>reefscape.png</file>
+        <file>2025 REEFSCAPE Transparent Background.png</file>
     </qresource>
     <qresource prefix="/">
         <file>settings.qml</file>
